[gd_scene load_steps=6 format=3 uid="uid://xfhspw51npnf"]

[ext_resource type="Script" uid="uid://chccaa7ma77pw" path="res://Scenes/Game/Game.gd" id="1_ln2h6"]
[ext_resource type="PackedScene" uid="uid://d3rdq4d1f3p65" path="res://Scenes/Plane/Plane.tscn" id="2_gwu2e"]
[ext_resource type="PackedScene" uid="uid://vtio3u6g181o" path="res://Scenes/ParallaxBG/ParallaxBg.tscn" id="2_y3kpf"]
[ext_resource type="PackedScene" uid="uid://m7t570nh1u0l" path="res://Scenes/Barrier/Barrier.tscn" id="3_xbxml"]
[ext_resource type="PackedScene" uid="uid://df0o18m0nulpg" path="res://Scenes/UI/GameUI/GameUi.tscn" id="5_y3kpf"]

[node name="Game" type="Node2D"]
script = ExtResource("1_ln2h6")

[node name="ParallaxBG" parent="." instance=ExtResource("2_y3kpf")]

[node name="Plane" parent="." instance=ExtResource("2_gwu2e")]
position = Vector2(44, 214)

[node name="Barrier" parent="." instance=ExtResource("3_xbxml")]

[node name="ObstacleContainer" type="Node" parent="."]

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 1.6
autostart = true

[node name="UpperSP" type="Marker2D" parent="."]
position = Vector2(516, 157)

[node name="LowerSP" type="Marker2D" parent="."]
position = Vector2(516, 677)

[node name="CanvasLayer" type="CanvasLayer" parent="."]
process_mode = 3

[node name="Game UI" parent="CanvasLayer" instance=ExtResource("5_y3kpf")]

[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
